[package]
name = "lua"
version = "0.0.7"
authors = ["J.C. Moyer"]
description = "Bindings to Lua 5.3"
documentation = "http://www.rust-ci.org/jcmoyer/rust-lua53/doc/lua/"
repository = "https://github.com/jcmoyer/rust-lua53"
readme = "README.md"
keywords = [
  "lua", "lua53", "rust-lua53", "bindings"
]
license = "MIT"
build = "build.rs"
links = "lua5.3"

[dependencies]
bitflags = "0.1"

[build-dependencies]
pkg-config = "0.3.5"
