[package]
name = "lua"
version = "0.0.9"
authors = ["J.C. Moyer"]
description = "Bindings to Lua 5.3"
documentation = "http://www.rust-ci.org/jcmoyer/rust-lua53/doc/lua/"
repository = "https://github.com/jcmoyer/rust-lua53"
readme = "README.md"
keywords = [
  "lua", "lua53", "rust-lua53", "bindings"
]
license = "MIT"

[dependencies]
bitflags = "0.7"

[dependencies.lua-sys]
version = "0.0.1"
path = "lua-sys"
