[package]
name = "lua-sys"
version = "0.0.1"
authors = ["J.C. Moyer"]
description = "FFI bindings to Lua"
repository = "https://github.com/jcmoyer/rust-lua53"
keywords = [
  "lua", "lua53", "rust-lua53", "bindings"
]
license = "MIT"
build = "build.rs"
links = "lua"

[dependencies]
libc = "0.2.13"

[dependencies.rcstring]
version = "0.2"
optional = true

[build-dependencies]
gcc = "0.3"

[features]
no_std = ["rcstring"]
