[package]
name = "lua-sys"
version = "0.0.1"
authors = ["J.C. Moyer"]
description = "FFI bindings to Lua"
repository = "https://github.com/jcmoyer/rust-lua53"
keywords = [
  "lua", "lua53", "rust-lua53", "bindings"
]
license = "MIT"
build = "build.rs"
links = "lua"

[dependencies.libc]
version = "0.2.13"
default-features = false

[build-dependencies]
gcc = "0.3"

[features]
default = ["use_std"]
use_std = ["libc/use_std"]
